--- a/css/newEmpPayRoll1.css
+++ b/css/newEmpPayRoll1.css
@@ -1,21 +1,44 @@
+body{
+    margin:0;
+    height: 100%;
+}
 .header
 {
     padding:15px 0;
     background-color: #ffffff;
 }
-/*by default flex display will give direction as row*/
 .header-content
 {
     display: flex;
-    /*justify-content: center;*/
-    /*border: 1px solid green;*/
+    justify-content: center;
+    border: 1px solid green;
 }
 .logo-content
 {
     display: flex;
-    align-items:center;
-    /*width:20%;*/
+    align-items: center;
+    border: 1px solid green;
+    width:80%;
 }
+img{
+    width:5em;
+}
+.logo-content-img{
+    border: 1px solid #42515f;
+}
+.emp-text
+{
+    font:normal normal bold 20px/25px Montserrat;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 0px;
+    color: #82a70c;
+    text-transform: capitalize;
+}
+.emp-payroll
+{
+    color: #42515f;
+}
+
 .form-content
 {
     min-height:calc(100%-80px);
@@ -25,13 +48,13 @@
 }
 .form
 {
-    width:65%;
-    padding: 44px 60px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #f5f5f5;
-    border-radius: 8px;
-    box-shadow: 0px 3px 6px #00000029;
-    opacity: 1;
+width:65%;
+padding: 44px 60px;
+background: #FFFFFF 0% 0% no-repeat padding-box;
+border: 1px solid #f5f5f5;
+border-radius: 8px;
+box-shadow: 0px 3px 6px #00000029;
+opacity: 1;
 }
 .form-head
 {
@@ -54,41 +77,35 @@
 {
     min-width: 140px; 
 }
-label {
-    color: #42515f;
-    padding: 12px 12px 12px 0;
-    display: inline-block; 
-}
-.profile-radio-content 
-{
-    display: flex; 
-    flex-direction: row; 
-} 
-.profile-radio-content > label {
-    display: flex; 
-    flex-direction: row; 
-    align-items: center; 
-} 
-.profile {
-    width: 40px; 
-    border-radius: 50%; 
-    margin-left: 12px; 
-} 
-.text {
-    font-size: 16px; 
+    label {
+     padding: 12px 12px 12px 0;
+     display: inline-block; 
+    }
+    .text {
+     font-size: 16px; 
     color: #42515f; 
     opacity: 1; 
     font-family: Roboto; 
-}
-.input {
+    }
+    .input {
     width: 100%; 
     padding: 12px; 
     border: 1px solid #ccc;
      border-radius: 4px; 
     resize: vertical; 
-}
-select {
-    color: #42515f; 
+    }
+    .profile-radio-content 
+    {
+        display: flex; flex-direction: row; 
+    } 
+ .profile-radio-content > label {
+    display: flex; flex-direction: row; align-items: center; 
+   } 
+ .profile {
+    width: 40px; border-radius: 50%; margin-left: 12px; 
+   } 
+
+   select {
     padding: 12px; 
     border: 1px solid #CCC;
     border-radius: 4px; 
@@ -98,42 +115,43 @@ select {
     color: lid42515f; 
     background-color: transparent; 
    }
-.buttonParent {
+
+   .buttonParent {
     display: flex;
     margin-bottom: 10px;
     Justify-content: space-between;
     margin-top: 20px;
    }
-.button { 
-    font-size: 20px;
+ 
+    .button { 
+   font-size: 20px;
     font-family: Roboto;
-    color: #42515f; 
-    opacity: 1;
+    letter-spacing: box; 
+   color: #42515f; 
+   opacity: 1;
     background: transparent;
+    border: none;
     font-weight: 400;
     min-width: 140px;
     padding: 7px 7px;
     border: 1px solid #707070;
     cursor: pointer;
-    }
-.submitButtOn {
+   }
+    .submitButtOn {
+    border: none;
     background-color: #f5f5f5; 
-    margin-right: 10px;
-    }
-.cancelButton {
+   margin-right: 10px;
+   }
+    .cancelButton {
     text-decoration: none; 
-    text-align: center;
-    } 
-error-output
+   text-align: center;
+   } 
+   error-output
 {
 margin-left:10px;
 font-size:12px;
 font-style:italic;
 color:red;
 }
-@media only screen and (max-width:960px){
-    .form{
-        width: 80%;
-        padding: 44px 20px;
-    }
-}
+   
+   
